test-cases/alias_recursion3.exp
Error detected during type checking of modules alias_recursion3, alias_recursion3.mynode
[91mtest-cases/alias_recursion3.wybe:14:15: Type error in call to /=, argument 2
[0m[91mtest-cases/alias_recursion3.wybe:14:15: Type error in call to /=, argument 1
[0m[91mtest-cases/alias_recursion3.wybe:14:15: Type error in call to /=, argument 2
[0m[91mtest-cases/alias_recursion3.wybe:14:15: Type error in call to /=, argument 1
[0m[91mtest-cases/alias_recursion3.wybe:14:15: Type error in call to /=, argument 2
[0m[91mtest-cases/alias_recursion3.wybe:14:15: Type error in call to /=, argument 1
[0m[91mtest-cases/alias_recursion3.wybe:14:15: Type error in call to /=, argument 2
[0m[91mtest-cases/alias_recursion3.wybe:14:15: Type error in call to /=, argument 1
[0m[91mtest-cases/alias_recursion3.wybe:14:15: Type error in call to /=, argument 2
[0m[91mtest-cases/alias_recursion3.wybe:14:15: Type error in call to /=, argument 1
[0m